[package]
name = "kakao-rs"
version = "0.2.8"
edition = "2018"
authors = ["Seok Won <ikr@kakao.com>"]
description = "카카오 챗봇 JSON 제작 헬퍼 in Rust"
license = "MIT"
repository = "https://github.com/Alfex4936/kakao-rs"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["kakao", "kakaotalk", "chatbot", "kakaochatbot", "json"]

[[bench]]
name = "bench_all"
harness = false

[[example]]
name = "listcard"

[lib]
path = "src/lib.rs"
bench = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
criterion = "0.3"